# ConfAI

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: README.de.md  README.es.md  README.ja.md  README.ru.md  README.zh-CN.md
presets/: anthropic.toml  baseten.toml  byesu.toml  cerebras.toml  chutes.toml  deepinfra.toml  deepseek.toml  fireworks.toml  groq.toml  lmstudio.toml  mistral.toml  moonshot.toml  novita.toml  ollama-cloud.toml  ollama.toml  openai.toml  opencode-zen-claude.toml  opencode-zen-free.toml  opencode-zen-gpt.toml  opencode-zen.toml  openrouter.toml  together.toml  venice.toml  vercel.toml  xai.toml  zai.toml
presets/mcp/: context7.toml  continuum.toml  fetch.toml  filesystem.toml  git.toml  github.toml  memory.toml  playwright.toml  sequential-thinking.toml
src/: brand.rs  cli.rs  commands.rs  domain.rs  lib.rs  main.rs  mcp.rs  preset.rs  skill.rs  store.rs  tui.rs  ui.rs  update.rs
src/agent/: claude.rs  codex.rs  json.rs  mod.rs  sidecar.rs
src/agent/opencode/: auth.rs  mod.rs
src/net/: catalog.rs  mod.rs  probe.rs  registry.rs
