[package]
name = "confai"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Fast CLI to inspect and edit the config of every AI coding agent installed on your machine"
authors = ["redstone.md <https://redstone.md>"]
repository = "https://github.com/redstone-md/ConfAI"
homepage = "https://redstone.md"
license = "MIT"
readme = "README.md"
keywords = ["cli", "config", "ai", "agent", "tui"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "wrap_help"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml_edit = { version = "0.25", features = ["serde"] }
ureq = { version = "3.3", default-features = false, features = ["rustls", "json", "gzip"] }
which = "8.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
